# World-soccer-2026

./: .gitignore  README.md  pyproject.toml  todo.md
artifacts/: backtest.parquet  h2h.json  meta.json  model.joblib  teams.parquet
data/: country_centroids.csv
notebooks/: projet_02_bis.ipynb
src/world_soccer_2026/: __init__.py  app.py  backtest.py  benchmark.py  build_artifacts.py  explain.py  features.py  fixtures.py  geo.py  predict.py  selection.py  selection_features.py  tournament.py  utils.py
