[project]
name = "world-soccer-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "surybang", email = "hos.fabien@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.1",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "tabicl>=2.1.1",
    "xgboost>=3.3.0",
]

[project.scripts]
world-soccer-2026 = "world_soccer_2026:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
